[FIX] fixed button and alignment

--- a/Hiking tours puslapis/style.css
+++ b/Hiking tours puslapis/style.css
@@ -46,8 +46,7 @@ h1{
     justify-content: center;
     padding: 0 10vw 0 10vw;
 }
-.intro a{
-    text-decoration: none;
+.intro button{
     color:rgb(255 255 255);
 }
 .spacing{
@@ -255,7 +254,7 @@ button:active{
     background-color: #f8fbfc;
 }
 .gallery img{
-    width: 90vw;
+    width: 100%;
     height: 40vh;
     background-position: center;
     background-size: cover;
@@ -296,6 +295,7 @@ input[type="submit"]{
     height: 3.7vh;
     min-width: 70px;
     font-size: 1rem;
+    transform: translateX(-2px);
 }
 input::placeholder{
     padding-left: 5px;
@@ -398,6 +398,11 @@ header a{
     transform: scale(1.5);
     transition: all 1s ease-in; 
 }
+}
+@media screen and (min-width:1500px){
+    .gallery img{
+        width: 25%;
+    }    
 }
             /* MEDIA QUARIES */
 
